Allowing prebuilt_native_library rules to accept targets as input
Summary: As title

Reviewed By: asp2insp

fbshipit-source-id: f51972129dec83fc580ecb79d8a4f8a810836f21